SERVER-55198 Ensure tenant migrations currentOp output types match design